--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -41,9 +41,8 @@
     <EditText
         android:id="@+id/edt_password"
         android:layout_width="270dp"
-        android:layout_height="35dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginTop="12dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="15dp"
         android:background="@drawable/edittext_login_whitebox"
         android:ems="10"
         android:hint="비밀번호"
@@ -52,7 +51,6 @@
         android:textColorHint="#A0A0A0"
         android:textSize="16sp"
         android:visibility="visible"
-        app:layout_constraintBottom_toBottomOf="@+id/textView2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/edt_id" />
@@ -80,8 +78,8 @@
         android:layout_width="65dp"
         android:layout_height="30dp"
         android:layout_marginTop="12dp"
-        android:layout_marginEnd="25dp"
-        android:layout_marginRight="25dp"
+        android:layout_marginEnd="50dp"
+        android:layout_marginRight="50dp"
         android:fontFamily="@font/bmdohyeon"
         android:gravity="center"
         android:text="회원가입"
@@ -97,15 +95,17 @@
         style="?android:attr/borderlessButtonStyle"
         android:layout_width="270dp"
         android:layout_height="40dp"
-        android:layout_marginTop="8dp"
-        android:background="@drawable/button_login_box_sellector"
+        android:layout_marginTop="70dp"
+        android:layout_marginBottom="8dp"
+        android:background="@drawable/button_login_box_selector"
         android:fontFamily="@font/bmdohyeon"
         android:text="로그인"
         android:textColor="#ffffff"
         android:textSize="17dp"
-        app:layout_constraintBottom_toTopOf="@+id/edt_id"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edt_password" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
 </android.support.constraint.ConstraintLayout>
